src/objects/Job_Request__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill__c</fullName>
        <label>Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Requests</relationshipLabel>
        <relationshipName>Job_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_Date__c</fullName>
        <label>Job Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Job Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JR-{0000}</displayFormat>
        <label>Job Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>